launches grid aligning style fixes & style fixes for projects with very long names

--- a/src/main/resources/public/scss/sections/header.scss
+++ b/src/main/resources/public/scss/sections/header.scss
@@ -332,6 +332,11 @@
                text-decoration: none;
 
                .selected-project {
+                 white-space: nowrap;
+                 max-width: 300px;
+                 text-overflow: ellipsis;
+                 overflow: hidden;
+                 display: inline-block;
                  margin-right: 10px;
                  text-decoration: none;
                }
@@ -357,6 +362,7 @@
 
                  .dropdown-menu.user-projects {
                    top: 0;
+                   max-width: 300px;
                    max-height: none;
                    padding: 0;
                    margin: 0;
@@ -367,6 +373,9 @@
                      padding: 0;
 
                      a {
+                       max-width: 300px;
+                       text-overflow: ellipsis;
+                       overflow: hidden;
                        font-family: "OswaldRegular",sans-serif;
                        font-size: 16px;
                        clear: both;
